--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -1,4 +1,24 @@
-<div class="jumbotron">
-	<h1>Konfliktspel i Borlänge</h1>
-	<p class="lead">Välkommen till vår sida</p>
+<div id="slidecontainer">
+	<div class="centerbox" id="slidecenter">
+		<h1>SLIDE PICTURE GOES HERE</h1>
+	</div>
+</div>
+
+<div id="linkgrid" class="centerbox">
+	<div class="linkboxleft linkbox" id="">
+		<h1>BILDGALLERI</h1>
+	</div>
+	<div class="linkboxright linkbox" id="">
+		<h1>FORUM</h1>
+	</div>
+	
+	<div style="clear:both;"></div>
+	<div class="linkboxleft linkbox" id="">
+		<h1>OM OSS</h1>
+	</div>
+	<div class="linkboxright linkbox" id="">
+		<h1>EVENT KALENDER</h1>
+	</div>
+	
+	<div style="clear:both;"></div>
 </div>
