--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -13,20 +13,38 @@
 </div>
 
 <div id="linkgrid" class="centerbox">
-	<div class="linkboxleft linkbox" id="">
-		<h1>BILDGALLERI</h1>
-	</div>
-	<div class="linkboxright linkbox" id="">
-		<h1>FORUM</h1>
-	</div>
+	<a href="#/gallery">
+		<div class="linkboxleft linkbox" id="" style="background-image:url(media/gallery.png);">
+			<div class="lowerbar">
+				<p>BILDGALLERI</p>
+			</div>
+		</div>
+	</a>
+	
+	<a href="#/forum">
+		<div class="linkboxright linkbox" id="" style="background-image:url(media/forum.png);">
+			<div class="lowerbar">
+				<p>FORUM</p>
+			</div>
+		</div>
+	</a>
 	
 	<div style="clear:both;"></div>
-	<div class="linkboxleft linkbox" id="">
-		<h1>OM OSS</h1>
-	</div>
-	<div class="linkboxright linkbox" id="">
-		<h1>EVENT KALENDER</h1>
-	</div>
+	<a href="#/about">
+		<div class="linkboxleft linkbox" id="" style="background-image:url(media/about.png);">
+			<div class="lowerbar">
+				<p>OM OSS</p>
+			</div>
+		</div>
+	</a>
+	
+	<a href="#/events">
+		<div class="linkboxright linkbox" id="" style="background-image:url(media/calendar.png);">
+			<div class="lowerbar">
+				<p>EVENT KALENDER</p>
+			</div>
+		</div>
+	</a>
 	
 	<div style="clear:both;"></div>
 </div>
