--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -1,6 +1,6 @@
 body {
 	margin:0;
-	padding:0 10px 0 0;
+	padding:10px 0 0 0;
 }
 
 .centerbox {
@@ -8,44 +8,22 @@ body {
 	margin:0 auto 0 auto;
 }
 
-#header {
-	
-}
-
-#slidecontainer{
-	margin-top:10px;
+.widebox {
 	width:100%;
-	height:450px;
-	background-color: #707969;
+	margin:0;
 }
 
-#slidecenter {
-	height:100%;
-	border:5px solid #353B31;
+#header {
+	height:150px;
+	line-height:150px;
+	text-align:center;
 }
 
-#slidecenter ul {
-	height:100%;
-}
-
-#slidecenter ul li {
-	height:100%;
-	background-color:#353B31;
-}
-
-.slideframe {
-	height:100%;
-	padding:30px;
-	color:white;
-	background-position:center top;
-	background-repeat:no-repeat;
-}
-
-#linkgrid {
+#imagegrid {
 	margin-top:20px;
 }
 
-.linkbox {
+.imagebox {
 	width:450px;
 	border:1px dotted #707969;
 	height:250px;
@@ -56,29 +34,18 @@ body {
 	background-size:200px;
 }
 
-.linkboxleft {
+.imageboxleft {
 	float:left;
 }
 
-.linkboxright {
+.imageboxright {
 	float:right;
 }
 
-.linkbox .lowerbar {
-	width:100%;
-	height:50px;
-	position:relative;
-	margin-bottom:0px;
+#footer {
+	position:absolute;
 	bottom:0;
-	padding:10px;
-	
-	opacity: 0.7;
-    filter: alpha(opacity=70); 
-	background-color: #707969;
-}
-
-.lowerbar p {
-	text-align:center;
-	font-size:14pt;
-	color:white;
+	width:100%;
+	height:30px;
+	background-color:#707969;
 }
