--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -12,39 +12,11 @@
 	</div>
 </div>
 
-<div id="linkgrid" class="centerbox">
-	<a href="#/gallery">
-		<div class="linkboxleft linkbox" id="" style="background-image:url(media/gallery.png);">
-			<div class="lowerbar">
-				<p>BILDGALLERI</p>
-			</div>
-		</div>
-	</a>
+<div class="centerbox textbox">
+	<h1>Lorem ipsum</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae pulvinar augue, vel faucibus elit. Maecenas semper lacinia diam. Suspendisse vel sem purus. Cras luctus commodo dolor, sed feugiat lacus aliquam non. Nullam quis lobortis ipsum, at tempus erat. Fusce porta sapien sit amet lorem porta, at accumsan risus auctor. Nullam sit amet magna non nunc ultrices mollis. Integer venenatis neque id neque scelerisque, quis faucibus nisl tincidunt. Integer mollis nisi ut nibh congue ultrices. Cras placerat sit amet libero in posuere. Ut id odio accumsan, cursus mauris eleifend, pulvinar metus. Proin ultrices hendrerit aliquam. Morbi consequat, justo a porttitor egestas, diam eros gravida neque, sit amet condimentum enim dui nec diam. In in nisi ac augue vulputate ultrices porta sed erat. In tempor suscipit lacus quis lacinia.</p>
+</div>
+
+<div id="imagegrid" class="centerbox">
 	
-	<a href="#/forum">
-		<div class="linkboxright linkbox" id="" style="background-image:url(media/forum.png);">
-			<div class="lowerbar">
-				<p>FORUM</p>
-			</div>
-		</div>
-	</a>
-	
-	<div style="clear:both;"></div>
-	<a href="#/about">
-		<div class="linkboxleft linkbox" id="" style="background-image:url(media/about.png);">
-			<div class="lowerbar">
-				<p>OM OSS</p>
-			</div>
-		</div>
-	</a>
-	
-	<a href="#/events">
-		<div class="linkboxright linkbox" id="" style="background-image:url(media/calendar.png);">
-			<div class="lowerbar">
-				<p>EVENT KALENDER</p>
-			</div>
-		</div>
-	</a>
-	
-	<div style="clear:both;"></div>
 </div>
