--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -3,6 +3,10 @@ body {
 	padding:10px 0 0 0;
 }
 
+img {
+	border:0;
+}
+
 .centerbox {
 	width:1024px;
 	margin:0 auto 0 auto;
@@ -42,10 +46,28 @@ body {
 	float:right;
 }
 
-#footer {
+#footercontainer {
 	position:absolute;
 	bottom:0;
-	width:100%;
 	height:30px;
 	background-color:#707969;
+	z-index:100;
+}
+
+#footercontent{
+	line-height:30px;
+}
+
+#footercontent p {
+	color:white;
+	padding:0;
+	margin:0;
+	vertical-align:center;
+	float:left;
+}
+
+.socialmediaimage {
+	height:25px;
+	margin-top:2.5px;
+	float:right;
 }
