--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -18,5 +18,12 @@
 </div>
 
 <div id="imagegrid" class="centerbox">
+	<div class="imageboxleft imagebox" style="text-align:center;">
+		<img src="media/imageplaceholder.png" style="height:300px;"></img>
+	</div>
 	
+	<div class="imageboxright imagebox" style="text-align:center;">
+		<img src="media/imageplaceholder.png" style="height:300px;"></img>
+	</div>
+	<div class="clear"></div>
 </div>
