Tweaked the forum theme to fit the page layout

--- a/forum-theme/kib/template/overall_footer.html
+++ b/forum-theme/kib/template/overall_footer.html
@@ -2,7 +2,7 @@
 
 <div id="page-footer">
 
-	<div class="navbar">
+	<div class="centerbox">
 		<div class="inner"><span class="corners-top"><span></span></span>
 
 		<ul class="linklist">
@@ -31,6 +31,21 @@
 <div>
 	<a id="bottom" name="bottom" accesskey="z"></a>
 	<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
+</div>
+
+</div>
+</div>
+		
+<div class="widebox" id="footercontainer">
+	<div class="centerbox" id="footercontent">
+		<p>Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
+		
+		<a href="#">
+			<img class="socialmediaimage" src="/kib-web/pageroot/media/facebook.png"></img>
+		</a>
+			
+		<div class="clear"></div>
+	</div>
 </div>
 
 </body>
