--- a/forum-theme/kib/theme/stylesheet.css
+++ b/forum-theme/kib/theme/stylesheet.css
@@ -28,3 +28,6 @@
 @import url("tweaks.css");
 @import url("colours.css");
 @import url("kib.css");
+@import url("../../../pageroot/css/page.css");
+@import url("../../../pageroot/css/menu.css");
+@import url("../../../pageroot/css/footer.css");
