Added "Add Page" button, fixed list not refreshed after delete

--- a/pageroot/admin/templates/listPageTemplate.html
+++ b/pageroot/admin/templates/listPageTemplate.html
@@ -3,6 +3,9 @@
 		<h1>Pages in database</h1>
 	</div>
 
+	<a href="#/admin/adminpage" class="btn btn-default" style="float:right;">Add New Page</a>
+	<div class="clear"></div>
+	
 	<table class="table table-hover">
 		<thead>
 			<tr>
