--- a/pageroot/css/gallery.css
+++ b/pageroot/css/gallery.css
@@ -1,3 +1,19 @@
 .galleryrowholder {
+overflow: hidden;
+	margin-top:30px;
+	min-height:200px;
+	text-align:center;
+}
+
+.galleryrowholder ul {
+	list-style-type:none;	
+	padding:0;
+}
+
+.galleryrowholder ul li{
+	display:inline-block;
+}
+
+.galleryrowholder img{
 	height:200px;
 }
