--- a/pageroot/css/gallery.css
+++ b/pageroot/css/gallery.css
@@ -1,19 +1,20 @@
 .galleryrowholder {
-overflow: hidden;
+	overflow: hidden;
 	margin-top:30px;
 	min-height:200px;
 	text-align:center;
 }
 
-.galleryrowholder ul {
+.galleryrow {
 	list-style-type:none;	
 	padding:0;
 }
 
-.galleryrowholder ul li{
+.galleryrow li{
 	display:inline-block;
+	margin:5px;
 }
 
-.galleryrowholder img{
+.galleryrow img{
 	height:200px;
 }
