Cleaned up the template a bit

--- a/pageroot/templates/galleryPageTemplate.html
+++ b/pageroot/templates/galleryPageTemplate.html
@@ -1,7 +1,7 @@
 <div class="galleryrowholder widebox">
 	<ul class="galleryrow">
 		<li ng-repeat="image in images">
-			<img ng-src="{{image}}" ng-click="focusImage(this)"/>
+			<img ng-src="{{image}}"/>
 		</li>
 	</ul>
 </div>
