Hackish implementation of overflow behavior

--- a/pageroot/templates/galleryPageTemplate.html
+++ b/pageroot/templates/galleryPageTemplate.html
@@ -1,7 +1,9 @@
-<div class="galleryrowholder widebox">
+<div class="galleryrowholder">
+  <div class="galleryrowinner">
 	<ul class="galleryrow">
 		<li ng-repeat="image in images">
 			<img ng-src="{{image}}"/>
 		</li>
 	</ul>
+  </div>
 </div>
