--- a/pageroot/css/gallery.css
+++ b/pageroot/css/gallery.css
@@ -2,7 +2,11 @@
 	overflow: hidden;
 	margin-top:30px;
 	min-height:200px;
-	text-align:center;
+	width:100%
+}
+
+.galleryrowinner {
+		
 }
 
 .galleryrow {
