--- a/pageroot/templates/galleryPageTemplate.html
+++ b/pageroot/templates/galleryPageTemplate.html
@@ -1,9 +1,1 @@
-<div class="galleryrowholder">
-  <div class="galleryrowinner">
-	<ul class="galleryrow">
-		<li ng-repeat="image in images">
-			<img ng-src="{{image}}"/>
-		</li>
-	</ul>
-  </div>
-</div>
+<gallery-row />
