--- a/pageroot/templates/galleryRowTemplate.html
+++ b/pageroot/templates/galleryRowTemplate.html
@@ -1,4 +1,5 @@
 <div class="galleryrowholder">
+  <h3>{{name}}</h3>
   <div class="galleryrowinner">
 	<ul class="galleryrow">
 		<li ng-repeat="image in images">
