Added additional gallery rows for testing

--- a/pageroot/templates/galleryPageTemplate.html
+++ b/pageroot/templates/galleryPageTemplate.html
@@ -1,1 +1,5 @@
-<gallery-row images="images" name="Test Gallery"/>
+<gallery-row images="images" name="Test Gallery" />
+
+<gallery-row images="images2" name="Test Gallery 2" />
+
+<gallery-row images="images3" name="Test Gallery 3" />
