Stripped out some left over divs

--- a/forum-theme/kib/template/overall_footer.html
+++ b/forum-theme/kib/template/overall_footer.html
@@ -26,19 +26,17 @@
 	</div>
 </div>
 
-</div>
-
 <div>
 	<a id="bottom" name="bottom" accesskey="z"></a>
 	<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
 </div>
 
-</div>
+
 </div>
 		
 <div class="widebox" id="footercontainer">
 	<div class="centerbox" id="footercontent">
-		<p>Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
+		<p style="margin-top:4px;">Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
 		
 		<a href="#">
 			<img class="socialmediaimage" src="/kib-web/pageroot/media/facebook.png"></img>
