Unselect all gallery-rows when selecting another image

--- a/pageroot/templates/galleryRowTemplate.html
+++ b/pageroot/templates/galleryRowTemplate.html
@@ -3,7 +3,7 @@
   <div class="galleryrowinner">
 	<ul class="galleryrow">
 		<li ng-repeat="image in images">
-			<img ng-src="{{image}}"/>
+			<img class="galleryImage" ng-src="{{image}}"/>
 		</li>
 	</ul>
   </div>
