--- a/pageroot/css/calendar-custom.css
+++ b/pageroot/css/calendar-custom.css
@@ -1,12 +1,8 @@
-#calendercontainer{
+#calendarcontainer{
 	margin-top:20px;
 	padding:10px 0 10px 0;
 	background-color:#707969;
-}
-
-.calendar {
-	width:900px;
-	height:500px;
+	overflow:hidden;
 }
 
 .fc-widget-header{
