Use EndDate from server / Calculate duration

--- a/pageroot/templates/eventPageTemplate.html
+++ b/pageroot/templates/eventPageTemplate.html
@@ -15,7 +15,10 @@
 		<div class="col-md-3">
 			<dl>
 				<dt>Datum och tid</dt>
-				<dd>{{selectedEvent.Date}}</dd>
+				<dd>{{selectedEvent.StartDate}}</dd>
+				
+				<dt>Längd</dt>
+				<dd>{{selectedEvent.Duration}} timmar</dd>
 				
 				<dt>Plats</dt>
 				<dd>{{selectedEvent.Location}}</dd>
