CRUD operations implemented for events
...no error handling!

--- a/pageroot/admin/templates/adminEventPageTemplate.html
+++ b/pageroot/admin/templates/adminEventPageTemplate.html
@@ -3,7 +3,7 @@
 	<form role="form" ng-submit="saveEvent()">
 		<div class="form-group">
 			<label>Title</label>
-			<input class="form-control" type="text" ng-model="event.pageName" />
+			<input class="form-control" type="text" ng-model="event.Title" />
 		</div>
 		
 		<div class="form-group">
@@ -23,7 +23,7 @@
 		
 		<div class="form-group">
 			<label>Description</label>
-			<textarea class="form-control" ng-model="event.Descropi"></textarea>
+			<textarea class="form-control" ng-model="event.Description"></textarea>
 		</div>
 		
 		<button type="submit" class="btn btn-default">{{buttonText}}</button>
