--- a/pageroot/css/gallery.css
+++ b/pageroot/css/gallery.css
@@ -3,7 +3,7 @@
 	margin-top:20px;
 	min-height:200px;
 	width:100%;
-	background-color:#353B31;
+	background-color:#707969;
 }
 
 .galleryrowholder h3 {
@@ -31,5 +31,5 @@
 
 .selectedImage {
 	height: 400px;
-	border:10px solid black;
+	border:10px solid #353B31;
 }
