--- a/pageroot/templates/galleryPageTemplate.html
+++ b/pageroot/templates/galleryPageTemplate.html
@@ -1,5 +1,7 @@
-<gallery-row images="images" name="Test Gallery"></gallery-row>
+<div id="gallerypagebody">
+	<gallery-row images="images" name="Test Gallery"></gallery-row>
 
-<gallery-row images="images2" name="Test Gallery 2"></gallery-row>
+	<gallery-row images="images2" name="Test Gallery 2"></gallery-row>
 
-<gallery-row images="images3" name="Test Gallery 3"></gallery-row>
+	<gallery-row images="images3" name="Test Gallery 3"></gallery-row>
+</div>
