Added nice looking headers to admin templates

--- a/pageroot/admin/templates/adminEventPageTemplate.html
+++ b/pageroot/admin/templates/adminEventPageTemplate.html
@@ -1,5 +1,14 @@
 <div class="centerbox textbox">
-	<h2>Administer event</h2>
+	<div class="page-header">
+		<a href="#/admin" class="btn btn-default" style="float:left;">
+			<span class="glyphicon glyphicon-chevron-left"></span> Back
+		</a>
+		
+		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Administer event</h1>
+		<div class="clearfix"></div>
+	</div>
+	
+	
 	<form role="form" ng-submit="saveEvent()">
 		<div class="form-group">
 			<label>Title</label>
