--- a/pageroot/admin/templates/adminIndex.html
+++ b/pageroot/admin/templates/adminIndex.html
@@ -1,6 +1,8 @@
 <div class="centerbox" ng-show="auth">
-	<h1>Admin Index</h1>
-
+	<div class="page-header">
+		<h1>Admin Index</h1>
+	</div>
+	
 	<div class="container-fluid">
 		<div class="row" ng-hide="auth.authlevel == 1">
 			<div class="col-md-6">
