--- a/pageroot/admin/templates/adminPagePageTemplate.html
+++ b/pageroot/admin/templates/adminPagePageTemplate.html
@@ -1,4 +1,13 @@
-<div class="centerbox textbox">
+<div class="centerbox">
+	<div class="page-header">
+		<a href="#/admin" class="btn btn-default" style="float:left;">
+			<span class="glyphicon glyphicon-chevron-left"></span> Back
+		</a>
+		
+		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Administer page</h1>
+		<div class="clearfix"></div>
+	</div>
+
 	<form role="form" ng-submit="savePage()">
 		<div class="form-group">
 			<label>Page name and url path (no spaces!)</label>
