--- a/pageroot/admin/templates/listPageTemplate.html
+++ b/pageroot/admin/templates/listPageTemplate.html
@@ -1,8 +1,13 @@
 <div class="centerbox">
-	<div class="header">
-		<h1>Pages in database</h1>
+	<div class="page-header">
+		<a href="#/admin" class="btn btn-default" style="float:left;">
+			<span class="glyphicon glyphicon-chevron-left"></span> Back
+		</a>
+		
+		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Pages in database</h1>
+		<div class="clearfix"></div>
 	</div>
-
+	
 	<a href="#/admin/adminpage" class="btn btn-default" style="float:right;">Add New Page</a>
 	<div class="clear"></div>
 	
