Fixed back buttons in admin interface

--- a/pageroot/admin/templates/adminEventPageTemplate.html
+++ b/pageroot/admin/templates/adminEventPageTemplate.html
@@ -1,6 +1,6 @@
 <div class="centerbox textbox">
 	<div class="page-header">
-		<a href="#/admin" class="btn btn-default" style="float:left;">
+		<a href="#/admin/listevents" class="btn btn-default" style="float:left;">
 			<span class="glyphicon glyphicon-chevron-left"></span> Back
 		</a>
 		
