--- a/pageroot/admin/templates/adminIndex.html
+++ b/pageroot/admin/templates/adminIndex.html
@@ -3,48 +3,53 @@
 		<h1>Admin Index</h1>
 	</div>
 	
+	<div class="well">
+		Logged in as {{auth.user}} at authentication level {{auth.authlevel | authlevelname}}
+		<span ng-show="auth.authlevel == 1"><br />You do not have right to change any content!</span>
+	</div>
+	
 	<div class="container-fluid">
 		<div class="row" ng-hide="auth.authlevel == 1">
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						Pages
 					</div>
 					<div class="panel-body">
-						<ul class="list-unstyled">
-							<li>
-								<a href="#/admin/adminpage" class="btn btn-default widebox">Add New Page</a>
-							</li>
-							<li>
-								<a href="#/admin/listpages" class="btn btn-default widebox">Administer pages</a>
-							</li>
-						</ul>
+						<div class="list-group" style="text-align:center;">
+							<a href="#/admin/adminpage" class="list-group-item">Add New Page</a>
+							<a href="#/admin/listpages" class="list-group-item">Administer pages</a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						Events
 					</div>
 					<div class="panel-body">
-						<ul class="list-unstyled">
-							<li>
-								<a href="#/admin/adminevent" class="btn btn-default widebox">Add New Event</a>
-							</li>
-							<li>
-								<a href="#/admin/listevents" class="btn btn-default widebox">Administer Events</a>
-							</li>
-						</ul>
+						<div class="list-group" style="text-align:center;">
+							<a href="#/admin/adminevent" class="list-group-item">Add New Event</a>
+							<a href="#/admin/listevents" class="list-group-item">Administer Events</a>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		
-		<div class="panel panel-default">
-			<div class="panel-body">
-				Logged in as {{auth.user}} at authentication level {{auth.authlevel | authlevelname}}
-				<span ng-show="auth.authlevel == 1"><br />You do not have right to change any content!</span>
+			<div class="col-md-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						Image Gallery
+					</div>
+					<div class="panel-body">
+						<div class="list-group" style="text-align:center;">
+							<a href="#/admin" class="list-group-item">Add New Gallery</a>
+							<a href="#/admin" class="list-group-item">Administer Galleries</a>
+							<a href="#/admin" class="list-group-item">Upload Images</a>
+							<a href="#/admin" class="list-group-item">Administer Images</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
