Yet more fixes to footer

--- a/pageroot/templates/eventPageTemplate.html
+++ b/pageroot/templates/eventPageTemplate.html
@@ -4,7 +4,7 @@
 	</div>
 </div>
 
-<div class="centerbox textbox" ng-show="selectedEvent" style="margin-top:10px;">
+<div class="centerbox textbox" ng-show="selectedEvent" style="margin-top:10px;margin-bottom:20px;">
 	<button type="button" ng-click="closeEvent()" class="btn btn-default" style="float:right">
 		Stäng <span class="glyphicon glyphicon-remove"></span> 
 	</button>
