--- a/pageroot/css/gallery.css
+++ b/pageroot/css/gallery.css
@@ -15,6 +15,10 @@
 	position:relative;
 }
 
+.galleryrowholder:last-child {
+	margin-bottom:20px;
+}
+
 .galleryrow {
 	list-style-type:none;	
 	padding:0;
