Added link to upload page

--- a/pageroot/admin/templates/adminIndex.html
+++ b/pageroot/admin/templates/adminIndex.html
@@ -45,7 +45,7 @@
 						<div class="list-group" style="text-align:center;">
 							<a href="#/admin" class="list-group-item">Add New Gallery</a>
 							<a href="#/admin" class="list-group-item">Administer Galleries</a>
-							<a href="#/admin" class="list-group-item">Upload Images</a>
+							<a href="#/admin/uploadpage" class="list-group-item">Upload Images</a>
 							<a href="#/admin" class="list-group-item">Administer Images</a>
 						</div>
 					</div>
