Set videos on controller level

--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -1,6 +1,6 @@
 <div id="slidecontainer">
 	<div class="centerbox" id="slidecenter">
-		<bg-video videos="['Example', 'RollingDice', 'AnotherVideo']"></bg-video>
+		<bg-video videos="videos"></bg-video>
 		<ul rn-carousel rn-carousel-auto-slide="4" rn-carousel-indicator='true' rn-carousel-transition='fade'>
 			<li ng-repeat="msg in messages">
 				<div>
