--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -4,6 +4,8 @@
 html, body {
   height: 100%;
   padding:10px 0 0 0;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 13px;
 }
 
 img {
