--- a/pageroot/admin/templates/adminEventPageTemplate.html
+++ b/pageroot/admin/templates/adminEventPageTemplate.html
@@ -31,6 +31,15 @@
 		</div>
 	
 		<div class="form-group">
+			<div class="input-group">
+			  <span class="input-group-addon">
+				<input type="checkbox"  ng-model="event.WholeDayEvent">
+			  </span>
+			  <label class="form-control">Is a whole day event</label>
+			</div>
+		</div>
+
+		<div class="form-group" ng-hide="event.WholeDayEvent">
 			<label>End datetime</label>
 			<div datetimepicker class="input-group date">
 				<span class="input-group-addon">
@@ -46,5 +55,6 @@
 		</div>
 		
 		<button type="submit" class="btn btn-default">{{buttonText}}</button>
+		</div>
 	</form>
 </div>
