Renamed to All day event and added template support

--- a/pageroot/admin/templates/adminEventPageTemplate.html
+++ b/pageroot/admin/templates/adminEventPageTemplate.html
@@ -33,9 +33,9 @@
 		<div class="form-group">
 			<div class="input-group">
 			  <span class="input-group-addon">
-				<input type="checkbox"  ng-model="event.WholeDayEvent">
+				<input type="checkbox"  ng-model="event.AllDayEvent">
 			  </span>
-			  <label class="form-control">Is a whole day event</label>
+			  <label class="form-control">Is an all day event</label>
 			</div>
 		</div>
 
