Changed paths to work on dev server

--- a/forum-theme/kib/template/overall_footer.html
+++ b/forum-theme/kib/template/overall_footer.html
@@ -39,7 +39,7 @@
 		<p style="margin-top:4px;">Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
 		
 		<a href="#">
-			<img class="socialmediaimage" src="/kib-web/pageroot/media/facebook.png"></img>
+			<img class="socialmediaimage" src="/media/facebook.png"></img>
 		</a>
 			
 		<div class="clear"></div>
