--- a/forum-theme/kib/template/overall_header.html
+++ b/forum-theme/kib/template/overall_header.html
@@ -108,17 +108,18 @@
 	<a id="top" name="top" accesskey="t"></a>
     
 	<div class="centerbox" id="header">
-				<a href="/kib-web/pageroot/#/"><img src="/kib-web/pageroot/media/new-logo.jpg" style="height:148px;"/></a>
+				<a href="/#">
+<img src="/media/new-logo.jpg" style="height:148px;"/></a>
 	</div>
 	
 	<div class="widebox" id="menubarcontainer">
 		<div class="centerbox" id="menubar" style="text-align:left;">
 			<ul style="float:left;">
 				<li>
-					<a href="/kib-web/pageroot/#/gallery">Bildgalleri</a>
+					<a href="/#/gallery">Bildgalleri</a>
 				</li>
 				<li>
-					<a href="/kib-web/pageroot/#/events">Eventkalender</a>
+					<a href="/#/events">Eventkalender</a>
 				</li>
 			</ul>
 			
