Changed CSS to normalize font settings over page and forum theme

--- a/forum-theme/kib/theme/stylesheet.css
+++ b/forum-theme/kib/theme/stylesheet.css
@@ -28,6 +28,6 @@
 @import url("tweaks.css");
 @import url("colours.css");
 @import url("kib.css");
-@import url("../../pageroot/css/page.css");
-@import url("../../pageroot/css/menu.css");
-@import url("../../pageroot/css/footer.css");
+@import url("../../../pageroot/css/page.css");
+@import url("../../../pageroot/css/menu.css");
+@import url("../../../pageroot/css/footer.css");
