--- a/forum-theme/kib/theme/content.css
+++ b/forum-theme/kib/theme/content.css
@@ -85,8 +85,8 @@ li.header dt, li.header dd {
 	color: #FFFFFF;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	font-size: 1.3em;
-	font-family: Arial, Helvetica, sans-serif;
+	/*font-size: 1.3em;
+	font-family: Arial, Helvetica, sans-serif;*/
 }
 
 li.header dt {
@@ -254,9 +254,9 @@ div[class].topic-actions {
 	vertical-align: bottom;
 }
 
-.postbody .content {
+/*.postbody .content {
 	font-size: 1.3em;
-}
+}*/
 
 .search .postbody {
 	width: 68%
