--- a/forum-theme/kib/theme/kib.css
+++ b/forum-theme/kib/theme/kib.css
@@ -33,9 +33,9 @@ ul.userlinks li {
 
 ul.userlinks li a {
 	display: block;
-	font-size: 1.3em;
+	/*font-size: 1.3em;*/
 	background: rgba(247,247,247,0.5);
-	font-family: "beb", Arial, Helvetica, sans-serif;
+	/*font-family: "beb", Arial, Helvetica, sans-serif;*/
 	word-spacing: 5px;
 	border-bottom: 3px solid #5ce53b;
 	line-height: 80px;
@@ -72,7 +72,7 @@ ul.userlinks li a strong {
 	display: block;
 	border-bottom: 3px solid #1e2025;
 	padding: 16px 16px 12px;
-	font-size: 1.3em;
+	/*font-size: 1.3em;*/
 	color: #ffffff;
 }
 
@@ -129,7 +129,7 @@ li.header dl.icon dt a:hover {
 }
 
 .breadcrumbs {
-	font-size: 1.3em;
+	/*font-size: 1.3em;*/
 	font-family: Arial, Helvetica, sans-serif;
 	margin-bottom: 20px;
 }
