Revert "Changed CSS to normalize font settings over page and forum theme"
This reverts commit 82d15eff96cf15ebf96b541a4ddce353b6e4c92a.

--- a/pageroot/css/menu.css
+++ b/pageroot/css/menu.css
@@ -31,8 +31,7 @@
 }
 
 #menubar ul li a{
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  	font-size: 13px;
+	font:none;
 	color:white;
 	vertical-align:center;
 	line-height:40px;
