--- a/forum-theme/kib/theme/common.css
+++ b/forum-theme/kib/theme/common.css
@@ -67,8 +67,8 @@ h4 {
 }
 
 p {
-	/*line-height: 1.3em;
-	font-size: 1.2em;*/
+	line-height: 1.3em;
+	font-size: 1.2em;
 	margin-bottom: 1.5em;
 }
 
