League info box now shrinks on scroll

--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -14,7 +14,9 @@
 			</div>
 		</div>
 		<div id="infobox-closer">
-			<a ng-click="minimized=!minimized">Öppna</a>
+			<a ng-click="minimized=!minimized">
+				<img src="media/league-info-open.png" />
+			</a>
 		</div>
 	</div>
 </div>
